--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <body>
 
 <audio controls>
-    <source src="horse.ogg" type="audio/ogg">
-    <source src="horse.mp3" type="audio/mpeg">
+    <source src="callConnected.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
 </body>
 </html>
-
