--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 
 <audio controls>
-    <source src="callConnected.mp3" type="audio/mpeg">
+   Connect Audio <source src="callConnected.mp3" type="audio/mpeg">
+   Silence Audio <source src="silence.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
