--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+ Connect Audio 
 <audio controls>
-   Connect Audio <source src="callConnected.mp3" type="audio/mpeg">
-   Silence Audio <source src="silence.mp3" type="audio/mpeg">
+  <source src="callConnected.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio><br/>
+Silence Audio <audio controls> <source src="silence.mp3" type="audio/mpeg"> 
     Your browser does not support the audio element.
 </audio>
-
 </body>
 </html>
